tests/neg-custom-args/captures/lazylists2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists2.scala:24:4 ------------------------------------
24 |    new Mapped  // error
   |    ^^^^^^^^^^
   |    Found:    LazyList[B^'s1]^{f, xs}
   |    Required: LazyList[B]^{f}
   |
   |    Note that capability `xs` is not included in capture set {f}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists2.scala:33:4 ------------------------------------
33 |    new Mapped  // error
   |    ^^^^^^^^^^
   |    Found:    LazyList[B^'s2]^{f, xs}
   |    Required: LazyList[B]^{xs}
   |
   |    Note that capability `f` is not included in capture set {xs}.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/lazylists2.scala:40:20 --------------------------------------------------------
40 |      def head: B = f(xs.head)  // error
   |                    ^
   |                  reference `f` is not included in the allowed capture set {xs} of the self type of class Mapped
-- Error: tests/neg-custom-args/captures/lazylists2.scala:41:48 --------------------------------------------------------
41 |      def tail: LazyList[B]^{this}= xs.tail.map(f) // error
   |                                                ^
   |                  reference `f` is not included in the allowed capture set {xs} of the self type of class Mapped
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists2.scala:51:4 ------------------------------------
51 |    new Mapped  // error
   |    ^^^^^^^^^^
   |    Found:    LazyList[B^'s3]^{f, xs}
   |    Required: LazyList[B]^{xs}
   |
   |    Note that capability `f` is not included in capture set {xs}.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/lazylists2.scala:60:10 --------------------------------------------------------
60 |    class Mapped2 extends Mapped:  // error
   |    ^
   |    references {f, xs} are not all included in the allowed capture set {} of the self type of class Mapped2
   |
61 |      this: Mapped =>
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists2.scala:62:4 ------------------------------------
62 |    new Mapped2 // error
   |    ^^^^^^^^^^^
   |    Found:    LazyList[B^'s4]^{f, xs}
   |    Required: LazyList[B]
   |
   |    Note that capability `f` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
